force-app/main/default/objects/Opportunity/fields/Amount_Financed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Financed__c</fullName>
    <description>Amount left to be financed once deposit is subtracted</description>
    <formula>Total_Amount__c  - Deposit__c + Trade_In_Lien__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Financed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>