force-app/main/default/objects/Opportunity/fields/Boat_Insurance_Total__c.field-meta.xml
<CustomField>
    <fullName>Boat_Insurance_Total__c</fullName>
    <formula>Amount + TotalTaxes__c - Trade_In_Value__c + (IF(ISBLANK(TaxRate__c), Trade_In_Value__c * 1.13, Trade_In_Value__c * (1 + TaxRate__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Insurance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>