force-app/main/default/objects/Opportunity/fields/Boat_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Boat_Numbers__c</fullName>
    <label>Boat Numbers</label>
    <length>10</length>
    <type>Text</type>
</CustomField>