force-app/main/default/objects/Opportunity/fields/Boat_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Boat_Product_Family__c</fullName>
    <formula>Text(BoatId__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Product Family</label>
    <type>Text</type>
</CustomField>