force-app/main/default/objects/Opportunity/fields/Boat_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Boat_Specialist__c</fullName>
    <formula>IF( ISNULL(Account.Boat_Specialist__c) , &#39;&#39;, Account.Boat_Specialist__r.FirstName + &#39; &#39; + Account.Boat_Specialist__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Specialist</label>
    <type>Text</type>
</CustomField>