force-app/main/default/objects/Opportunity/fields/Boat_Specialist_Id__c.field-meta.xml
<CustomField>
    <fullName>Boat_Specialist_Id__c</fullName>
    <formula>Account.Boat_Specialist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Specialist Id</label>
    <type>Text</type>
</CustomField>