force-app/main/default/objects/Opportunity/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The business Manager for this Opportunity</description>
    <label>Business Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>