force-app/main/default/objects/Opportunity/fields/Calculate_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Insurance_Amount__c</fullName>
    <formula>Amount + TotalTaxes__c -  Insurance_Total__c -  Deposit__c + Trade_In_Lien__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>