force-app/main/default/objects/Opportunity/fields/createdFromLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>createdFromLeadConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>createdFromLeadConversion</label>
    <type>Checkbox</type>
</CustomField>