force-app/main/default/objects/Opportunity/fields/Days_Since_Sold__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Sold__c</fullName>
    <formula>TODAY() -  CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>