force-app/main/default/objects/Opportunity/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Date the customer received his product</description>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>