force-app/main/default/objects/Opportunity/fields/Deposit_Method_Other__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Method_Other__c</fullName>
    <description>Use this field if Other is selected for Deposit Method</description>
    <label>Deposit Method Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>