force-app/main/default/objects/Opportunity/fields/Deposit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Percentage__c</fullName>
    <formula>Deposit__c /  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>