force-app/main/default/objects/Opportunity/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a customer requests that we do not email them, please checkmark this box</description>
    <inlineHelpText>If a customer requests that we do not email them, please checkmark this box (could be after a mass email or if the customer is no longer available)</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>