force-app/main/default/objects/Opportunity/fields/Email_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice__c</fullName>
    <formula>IF( Invoice_Document_Id__c = null, 
null, 
HYPERLINK(&apos;/_ui/core/email/author/EmailAuthor?new_template=true&amp;p3_lkid=&apos; &amp; Id &amp; &apos;&amp;doc_id=&apos; &amp; Invoice_Document_Id__c &amp; &apos;&amp;retURL=&apos; &amp; Id &amp; &apos;&amp;p2_lkid=&apos; &amp;  AccountId , &apos;Email Invoice&apos; ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Invoice</label>
    <type>Text</type>
</CustomField>