force-app/main/default/objects/Opportunity/fields/Extended_Warranty_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the customer is buying a boat, trailer, or trolling motor only, please check this box</description>
    <label>Extended Warranty Not Required</label>
    <type>Checkbox</type>
</CustomField>