force-app/main/default/objects/Opportunity/fields/FederalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FederalTaxAmount__c</fullName>
    <formula>Taxable_Total__c * $Setup.Legend_Settings__c.FederalTaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FederalTaxAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>