force-app/main/default/objects/Opportunity/fields/Finance_Gross_Payment__c.field-meta.xml
<CustomField>
    <fullName>Finance_Gross_Payment__c</fullName>
    <formula>Finance_Gross_Compound_Payment__c /  Finance_Payments_Per_Compound__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Pre-Insurance Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>