force-app/main/default/objects/Opportunity/fields/Finance_Gross_Principal_After_Term__c.field-meta.xml
<CustomField>
    <fullName>Finance_Gross_Principal_After_Term__c</fullName>
    <formula>(GrossFinanceAmount__c *((1+ Finance_Compound_Interest__c )^ ( Finance_Term__c *  Finance_Compound__c / 12))) 
-
( 
  ( Finance_Gross_Compound_Payment__c )*( ( (1+ Finance_Compound_Interest__c )^( Finance_Term__c *  Finance_Compound__c / 12) - 1 ) /Finance_Compound_Interest__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Gross Principal After Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>