force-app/main/default/objects/Opportunity/fields/Finance_Payment_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Finance_Payment_Monthly__c</fullName>
    <formula>Finance_Compound_Payment__c /  (12 /  Finance_Compound__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance payment Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>