force-app/main/default/objects/Opportunity/fields/Finance_Payments_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Finance_Payments_Per_Year__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Finance Payments Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>