force-app/main/default/objects/Opportunity/fields/Finance_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Status__c</fullName>
    <description>Financing status</description>
    <label>Finance Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Conditions</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Balance Owing</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Balance at Pickup</fullName>
            </value>
            <value>
                <fullName>Declined but Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>