force-app/main/default/objects/Opportunity/fields/Financing_Account__c.field-meta.xml
<CustomField>
    <fullName>Financing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Financed_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>