force-app/main/default/objects/Opportunity/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(  ( Close_Month__c  &gt;= 10 &amp;&amp; Close_Month__c &lt;= 12),
   
          ( TEXT (YEAR(CloseDate)+ 1))  ,
          (TEXT (YEAR(CloseDate)))
       )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>