force-app/main/default/objects/Opportunity/fields/Grand_Total2__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total2__c</fullName>
    <formula>( Amount +  TotalTaxes2__c -  TradeInValue2__c ) - Deposit__c + TradeInLien2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>