force-app/main/default/objects/Opportunity/fields/GrossFinanceAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossFinanceAmount__c</fullName>
    <description>The pre-insurance total, less deposit.</description>
    <formula>Pre_Insurance_Total__c -  Deposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Insurance Finance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>