force-app/main/default/objects/Opportunity/fields/Insurance_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Taxes__c</fullName>
    <formula>IF(  TaxOverRide__c , 
 TaxOverRideRate__c *  Insurance_Sub_Total__c , 
 ProvincialTaxRate__c * Insurance_Sub_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>