force-app/main/default/objects/Opportunity/fields/Insurance_Term__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Term__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Insurance Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>