force-app/main/default/objects/Opportunity/fields/Insurance_Total__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Total__c</fullName>
    <formula>Insurance_Sub_Total__c +  Tax_Amount_Retail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>