force-app/main/default/objects/Opportunity/fields/InsuranceTotal__c.field-meta.xml
<CustomField>
    <fullName>InsuranceTotal__c</fullName>
    <label>Total Insurance</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.IsInsurance__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>