force-app/main/default/objects/Opportunity/fields/Invoice_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Document_Id__c</fullName>
    <label>Invoice Document Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>