force-app/main/default/objects/Opportunity/fields/Invoice_Number_BarCode__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_BarCode__c</fullName>
    <formula>IF(  InvoiceNumber__c == NULL,
NULL,
IMAGE(&quot;https://www.barcodesinc.com/generator/image.php?code=&quot;+  InvoiceNumber__c  +&quot;&amp;style=68&amp;type=C128B&amp;width=150&amp;height=40&amp;xres=1&amp;font=3&quot; ,&quot;Barcode&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number BarCode</label>
    <type>Text</type>
</CustomField>