force-app/main/default/objects/Opportunity/fields/isNewTaxFormat__c.field-meta.xml
<CustomField>
    <fullName>isNewTaxFormat__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isNewTaxFormat</label>
    <type>Checkbox</type>
</CustomField>