force-app/main/default/objects/Opportunity/fields/IsPickupDealershipPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPickupDealershipPartner__c</fullName>
    <formula>NOT( PickupDealership__r.Is_Internal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pickup Dealership a Partner</label>
    <type>Checkbox</type>
</CustomField>