force-app/main/default/objects/Opportunity/fields/Link_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Invoice__c</fullName>
    <formula>IF( Invoice_Document_Id__c  = null,
 null,
 HYPERLINK(&#39;/servlet/servlet.FileDownload?file=&#39; &amp; Invoice_Document_Id__c , &#39;View Invoice&#39; )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Invoice</label>
    <type>Text</type>
</CustomField>