force-app/main/default/objects/Opportunity/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>Owner.Manager.FirstName +&#39; &#39; + Owner.Manager.LastName &amp; BR() &amp; 
Owner.Manager.Title &amp; BR() &amp; BR() &amp; 
Owner.Manager.Email &amp; BR() &amp; 
Owner.Manager.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>