force-app/main/default/objects/Opportunity/fields/Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Middle_Initial__c</fullName>
    <description>Enter the customer&#39;s middle initial</description>
    <label>Middle Initial</label>
    <length>2</length>
    <type>Text</type>
</CustomField>