force-app/main/default/objects/Opportunity/fields/OppOwnerName__c.field-meta.xml
<CustomField>
    <fullName>OppOwnerName__c</fullName>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppOwnerName</label>
    <type>Text</type>
</CustomField>