force-app/main/default/objects/Opportunity/fields/Other_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_Lost__c</fullName>
    <description>Reason we lost the opportunity</description>
    <inlineHelpText>Reason we lost the opportunity</inlineHelpText>
    <label>Other Reason Lost</label>
    <length>144</length>
    <type>Text</type>
</CustomField>