force-app/main/default/objects/Opportunity/fields/Ownerships_Received__c.field-meta.xml
<CustomField>
    <fullName>Ownerships_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensuring the documentation for a trade in package is received</description>
    <label>Ownerships Received</label>
    <type>Checkbox</type>
</CustomField>