force-app/main/default/objects/Opportunity/fields/Package_Price__c.field-meta.xml
<CustomField>
    <fullName>Package_Price__c</fullName>
    <description>This is the standard package price</description>
    <label>Package Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>