force-app/main/default/objects/Opportunity/fields/ProvincialTaxTotal__c.field-meta.xml
<CustomField>
    <fullName>ProvincialTaxTotal__c</fullName>
    <formula>Taxable_Total__c  *  ProvincialTaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProvincialTaxTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>