force-app/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <description>Reason customer decided not to purchase</description>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Purchased Competitive Product</fullName>
            </value>
            <value>
                <fullName>Purchased Non-Competitive Product</fullName>
            </value>
            <value>
                <fullName>Unable to Get Financing</fullName>
            </value>
            <value>
                <fullName>Personal Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchased a Used Boat from Legend</fullName>
            </value>
            <value>
                <fullName>Purchased a Used Boat privately</fullName>
            </value>
            <value>
                <fullName>Purchased another Opportunity</fullName>
            </value>
            <value>
                <fullName>Dealer Customer</fullName>
            </value>
            <value>
                <fullName>Inaccurate/Missing Contact Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>