force-app/main/default/objects/Opportunity/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>