force-app/main/default/objects/Opportunity/fields/Summary_Link__c.field-meta.xml
<CustomField>
    <fullName>Summary_Link__c</fullName>
    <formula>HYPERLINK(Left($Api.Enterprise_Server_URL_190,(find(&#39;/services&#39;,$Api.Enterprise_Server_URL_190))) + &#39;apex/BoatConfigurator?opportunity_id=&#39; + Id + &#39;&amp;defaultView=showSummary&#39;, &#39;Opportunity Summary&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Link</label>
    <type>Text</type>
</CustomField>