force-app/main/default/objects/Opportunity/fields/Tax_Amount2_Provincial__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount2_Provincial__c</fullName>
    <formula>IF(   IsAccountTaxExempt__c , 0, 
  IF( Amount &lt;  Trade_In_Value__c , 
    0, 
   ( Taxable_Amount_Provincial__c -   Trade_In_Value__c  ) *  Tax_Rate_Provincial__c 
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount (Provincial)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>