force-app/main/default/objects/Opportunity/fields/Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Class</label>
    <referenceTo>Tax_Class__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>