force-app/main/default/objects/Opportunity/fields/Taxable_Amount_Retail__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount_Retail__c</fullName>
    <label>Taxable Amount (Retail)</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Taxable_Retail__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>