force-app/main/default/objects/Opportunity/fields/Taxable_Total__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Total__c</fullName>
    <formula>TaxableTotal_LineItems__c - Trade_In_Value__c -(IF(  Discount_Total__c &lt; 0, Discount_Total__c * -1, Discount_Total__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>