force-app/main/default/objects/Opportunity/fields/TaxableTotal_LineItems__c.field-meta.xml
<CustomField>
    <fullName>TaxableTotal_LineItems__c</fullName>
    <description>Taxable total of all the Product Line Items</description>
    <label>TaxableTotal_LineItems</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>