force-app/main/default/objects/Opportunity/fields/TaxOverRide__c.field-meta.xml
<CustomField>
    <fullName>TaxOverRide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TaxOverRide</label>
    <type>Checkbox</type>
</CustomField>