force-app/main/default/objects/Opportunity/fields/TaxOverRideRate__c.field-meta.xml
<CustomField>
    <fullName>TaxOverRideRate__c</fullName>
    <label>TaxOverRideRate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>