force-app/main/default/objects/Opportunity/fields/TotalTaxes2__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxes2__c</fullName>
    <formula>Tax_Amount2_Federal__c +  Tax_Amount2_Provincial__c + Tax_Amount2_Retail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>