force-app/main/default/objects/Opportunity/fields/TotalTaxRate__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxRate__c</fullName>
    <formula>Tax_Rate_Federal__c  +  Tax_Rate_Provincial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalTaxRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>