force-app/main/default/objects/Opportunity/fields/Trade_In_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Amount__c</fullName>
    <label>Trade In Amount</label>
    <summarizedField>Trade_In_Record__c.Total_Applied__c</summarizedField>
    <summaryForeignKey>Trade_In_Record__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>