force-app/main/default/objects/Opportunity/fields/Trade_In_Count__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Count__c</fullName>
    <label>Trade In Count</label>
    <summaryForeignKey>Trade_In_Record__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>