force-app/main/default/objects/Opportunity/fields/Year_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date__c</fullName>
    <description>Used to calculate whether an opportunity should be included in Year to Date report or not for previous years</description>
    <formula>IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,10,01),
YEAR( TODAY() ) -1,
YEAR( TODAY() )
),10,01)) &gt;= (CloseDate - DATE( (IF( CloseDate &lt; DATE( YEAR( CloseDate ) ,10,01),
YEAR( CloseDate ) -1,
YEAR( CloseDate ) )
),10,01)) ,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year to Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>